--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
     "cloudinary": "^1.37.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -25,11 +22,8 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22",
     "serverless-http": "^3.2.0",
-    "sharp": "^0.32.1",
-    "slugify": "^1.6.6",
-    "uuid": "^9.0.0"
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
