--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
