Uninstall morgan and nodemon dev dependencies and add scripts in package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "node_trainer",
+  "name": "nyumbaHub_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server"
+    "start": "netlify dev",
+    "deploy": "netlify deploy"
   },
   "author": "",
   "license": "ISC",
@@ -24,9 +22,5 @@
     "nodemailer": "^6.9.3",
     "serverless-http": "^3.2.0",
     "sharp": "^0.32.1"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
   }
 }
