--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [build]
     functions="functions"
+[[redirects]]
+    from = "/.netlify/functions/api/*"
+    to = "/.netlify/functions/api/:splat"
+    status = 200
