--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nyumbaHub_backend",
+  "name": "nyumbaHub_serverless_backend",
   "version": "1.0.0",
   "description": "",
   "scripts": {
